support expected error and duplicates configure

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -119,6 +119,9 @@ mat-tab-group {
   .error{
     background-color: crimson;
   }
+  .errorText{
+    color:red;
+  }
   .qaauto-tree ul,
   .qaauto-tree li {
     margin-top: 0;
