--- a/src/app/scenario.component.html
+++ b/src/app/scenario.component.html
@@ -11,16 +11,18 @@
   </mat-card-header>
   <mat-expansion-panel *ngFor="let error of scenario.error_summary">
     <mat-expansion-panel-header >
-      <mat-panel-title>{{error.name}}</mat-panel-title>
+      <mat-panel-title>{{error.name}}</mat-panel-title>      
     </mat-expansion-panel-header>
+    <mat-checkbox [(ngModel)]="error.expected" (change)="changeError(error,scenario,envData)" [disabled]="error.disabled"><b>Set as expected</b></mat-checkbox>
     <mat-accordion multi="false" >
+
       <li *ngFor="let step of error.steps"><button mat-button color="primary" (click)="gotoStep(step)"> {{step.name}}</button></li>
     </mat-accordion>
   </mat-expansion-panel>
 </mat-card>
 
 <mat-card  style="border:solid 1px black;" *ngIf="showDuplicated">
-  <mat-card-header> 
+  <mat-card-header>
     <mat-card-title>                    
       Duplicates Summary
     </mat-card-title>                  
@@ -30,7 +32,7 @@
       <mat-panel-title>{{duplicate.name}}</mat-panel-title>
     </mat-expansion-panel-header>
     <mat-accordion multi="false" >
-      <li *ngFor="let step of duplicate.steps"><button mat-button color="primary" (click)="gotoStep(step)"> {{step.name}}</button></li>
+      <li *ngFor="let step of duplicate.steps"><button mat-button color="primary" (click)="gotoStep(step)"> {{step.name}}</button><mat-checkbox [disabled]="step.disabled[duplicate.name]" [(ngModel)]="step.expected[duplicate.name]" (change)="changeDuplicate(duplicate,step,scenario)"><b>Set as expected</b></mat-checkbox></li>
     </mat-accordion>
   </mat-expansion-panel>
 </mat-card>
@@ -44,15 +46,15 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
     <mat-accordion multi="false" >      
-      <log-group [envData] = "envData" [logGroup]="step.sessions" [configure]="configure"></log-group>  
+      <log-group [envData] = "envData" [step] = "step" [logGroup]="step.sessions" [configure]="configure"></log-group>  
     </mat-accordion>
     
     <mat-accordion multi="false" >      
-      <log-group [envData] = "envData" [logGroup]="step.worker_list" [configure]="configure"></log-group>  
+      <log-group [envData] = "envData" [step] = "step" [logGroup]="step.worker_list" [configure]="configure" [scenario] = "scenario"></log-group>  
     </mat-accordion>
 
     <mat-accordion multi="false" *ngIf="step.unknown">      
-      <log-group [envData] = "envData" [logGroup]="step.unknown" [configure]="configure"></log-group>  
+      <log-group [envData] = "envData" [step] = "step" [logGroup]="step.unknown" [configure]="configure"></log-group>  
     </mat-accordion>
 
 </mat-expansion-panel>
