--- a/src/app/summary.component.html
+++ b/src/app/summary.component.html
@@ -58,5 +58,30 @@
     <tr mat-row *matRowDef="let row; columns: headers.concat(['remove']);"></tr>
   </table>
 
+  <H2 style="margin-top: 20px;"> Removed rules</H2>
 
+  <table mat-table [dataSource]="data.queues.removed" class="mat-elevation-z8">
+    <ng-container *ngFor="let item of single_list" [matColumnDef]="item">
+      <th mat-header-cell *matHeaderCellDef >{{item}}</th>
+      <td mat-cell *matCellDef="let element"> {{element[item]}} </td>            
+    </ng-container>
+    <ng-container *ngFor="let header of data.multiple_list" [matColumnDef]="header">
+      <th mat-header-cell *matHeaderCellDef >{{header}}</th>
+      <td mat-cell *matCellDef="let element"> <p *ngFor="let item of element[header]"> {{item}}</p> </td>            
+    </ng-container>    
+  
+  
+    <ng-container matColumnDef="remove">
+          <th mat-header-cell *matHeaderCellDef>remove</th>
+          <td mat-cell *matCellDef="let element">        
+              <button mat-fab color="primary" (click)="removeRemoved(element)">
+              <mat-icon style="font-size: medium;height: min-content;width: max-content;">delete</mat-icon>
+            </button>
+          </td>            
+        </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="headers"></tr>
+      <tr mat-row *matRowDef="let row; columns: headers.concat(['remove']);"></tr>
+    </table>
+  
 
